--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <h1>Contact Us</h1>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="d4baa2a6b9bab0fab8adbaacb7bbb0bdbab394b9b5baadb9b1fab7bbb9">[email&#160;protected]</a></li>
+<li>By email: <a href = "mailto: nvrmnd.lynxcoding@manyme.com">nvrmnd.lynxcoding@manyme.com</a></li>
 </ul>
 </div>
 </div>
@@ -230,6 +230,5 @@
 <script src="/track/v1/r/js-code" type="text/javascript" async="true"></script>
 <script src="/track/v1/r/js-data" type="text/javascript" async="true"></script>
 <img src="/track/v1/px" style="position:fixed;right:0px;bottom:0px;display:none;" />
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"74b413330ffc8c29","token":"dd281d4ac6a447be928fcee1746ec801","version":"2022.8.1","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
